// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelItem Component renders information "description" when property is set 1`] = `
<div
  className="ChannelItem"
>
  <div>
    Lisa und Bart vertreiben sich die Zeit auf dem Flohmarkt. Dort entdecken sie zu...
  </div>
</div>
`;

exports[`ChannelItem Component renders information "header" when property is set 1`] = `
<div
  className="ChannelItem"
>
  <div>
    Staffel: 5, Episode: 1, Titel: Homer und die Sangesbrüder
  </div>
</div>
`;

exports[`ChannelItem Component renders information "title" when property is set 1`] = `
<div
  className="ChannelItem"
>
  <div>
    The Simpsons in 10 Minuten auf Pro-Sieben
  </div>
</div>
`;

exports[`ChannelItem Component renders without crashing 1`] = `
<div
  className="ChannelItem"
/>
`;
